# bxdecay0

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  README.rst  bxdecay0-config.in
.github/workflows/: continuous.yml
bxdecay0/: Ac228.cc  Ac228.h  Am241.cc  Am241.h  Ar39.cc  Ar39.h  Ar42.cc  Ar42.h  As79.cc  As79.h  At214.cc  At214.h  At214low.cc  At214low.h  Ba136low.cc  Ba136low.h  Ba138low.cc  Ba138low.h  Bi207.cc  Bi207.h  Bi208.cc  Bi208.h  Bi210.cc  Bi210.h  Bi212.cc  Bi212.h  Bi214.cc  Bi214.h  BinReloc.c  BinReloc.h.in  C14.cc  C14.h  Ca48.cc  Ca48.h  Cd112low.cc  Cd112low.h  Cd113.cc  Cd113.h  Co60.cc  Co60.h  (+317 more)
bxdecay0/testing/: README.rst  test_alpha.cxx  test_bb.cxx  test_bb_utils.cxx  test_dbd_gA.bash  test_dbd_gA.cxx  test_dbd_gA.gp  test_decay0.cxx  test_decay0_generator.cxx  test_decay0_generator_mdl.gp  test_decay0_generator_mdlr.gp  test_electron.cxx  test_event.cxx  test_event_reader.cxx  test_fermi.cxx  test_gamma.cxx  test_genbbsub.cxx  test_pair.cxx  test_particle.cxx  test_positron.cxx  test_resource.cxx  test_std_random.cxx  test_tsimpr.cxx  test_utils.cxx  test_utils.gp
cmake/: BxDecay0Config.cmake.in  BxDecay0ConfigVersion.cmake.in  FindGSL.cmake  bxdecay0.pc.in
documentation/: cdf1.fig  gA_process.rst
documentation/PostGenEventOps/MDL/: README.rst
documentation/PostGenEventOps/MDL/images/: cone_emission_1.fig  cone_emission_2.fig  h1.his  h1bis.his  h1ter.his  h2.his  h2bis.his  h2ter.his
examples/ex00/: CMakeLists.txt  README.rst  ex00.cxx
examples/ex00/tools/: build.sh  clean.sh
examples/ex01/: CMakeLists.txt  README.rst  ex01.cxx  ex01bis.cxx
examples/ex01/tools/: build.sh  clean.sh
examples/ex02/: CMakeLists.txt  README.rst  ex02.cxx  ex02.data
examples/ex02/_build.d/: CMakeCache.txt  Makefile  cmake_install.cmake
examples/ex02/tools/: build.sh  clean.sh
examples/ex03/: CMakeLists.txt  README.rst  ex03.cxx
examples/ex03/tools/: build.sh  clean.sh
examples/ex04/: CMakeLists.txt  README.rst  ex04.cxx
examples/ex04/tools/: build.sh
examples/ex05/: CMakeLists.txt  README.rst  ex05.cxx  ex05.gp
extensions/: CMakeLists.txt
extensions/bxdecay0_g4/: CMakeLists.txt  README.rst
extensions/bxdecay0_g4/bxdecay0_g4/: primary_generator_action.cc  primary_generator_action.hh  primary_generator_action_messenger.cc  primary_generator_action_messenger.hh  unique_point_vertex_generator.cc  unique_point_vertex_generator.hh  unique_point_vertex_generator_messenger.cc  unique_point_vertex_generator_messenger.hh  version.hh.in  vertex_generator_interface.cc  vertex_generator_interface.hh
extensions/bxdecay0_g4/examples/bxdecay0_g4_ex01/: CMakeLists.txt  README.rst  bxdecay0_g4_ex01.cc
extensions/bxdecay0_g4/examples/bxdecay0_g4_ex01/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  HistoManager.hh  PhysicsList.hh  Run.hh
extensions/bxdecay0_g4/examples/bxdecay0_g4_ex01/macros/: Co60.mac  Y90.mac  debug.mac  plotHisto.C  singleDecay.mac  vis.mac
extensions/bxdecay0_g4/examples/bxdecay0_g4_ex01/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  RunAction.cc  SteppingVerbose.cc
extensions/bxdecay0_g4/examples/bxdecay0_g4_ex02/: CMakeLists.txt  README.rst  bxdecay0_g4_ex02.cc
extensions/bxdecay0_g4/examples/bxdecay0_g4_ex02/include/: ActionInitialization.hh  BoxBulkVertexGenerator.hh  DetectorConstruction.hh  RunAction.hh  SteppingVerbose.hh  TrackingAction.hh  VertexGeneratorRecorder.hh  VertexPoolLoader.hh
extensions/bxdecay0_g4/examples/bxdecay0_g4_ex02/macros/: Co60.mac  view_vertexes.gp  vis.mac
extensions/bxdecay0_g4/examples/bxdecay0_g4_ex02/src/: ActionInitialization.cc  BoxBulkVertexGenerator.cc  DetectorConstruction.cc  HistoManager.cc  Run.cc  TrackingAction.cc  VertexGeneratorRecorder.cc  VertexPoolLoader.cc
programs/: bxdecay0-run.cxx  bxdecay0_clparser.cpp  bxdecay0_clparser.hpp  bxdecay0_driver.cpp  bxdecay0_driver.hpp
resources/code/decay0/: decay0_2017-03-01.for  decay0_2018-12-05.for  decay0_2020-04-20.for
resources/data/: background_isotopes.lis  dbd_isotopes.lis  dbd_modes.lis
resources/data/dbd_gA/Test/g0/: tab_pdf.data
resources/data/dbd_gA/tools/: README.rst  generate.bash  mkocdfdata.py
resources/description/: dbd_isotopes.lis
resources/images/logo/: bxdecay0_logo.fig  bxdecay0_logo_su.fig
resources/images/supporters/: logo_panel.fig
resources/samples/Co60/: README.rst  genCo60-1.d0m  genCo60-1.d0t  genCo60-2.d0m  genCo60-2.d0t  genCo60-3.d0m  genCo60-3.d0t
source/bxdecay0/: Ac228.cc  Ac228.h  Am241.cc  Am241.h  Ar39.cc  Ar39.h  Ar42.cc  As79.cc  At214.cc  At214.h  At214low.cc  Ba136low.cc  Ba136low.h  Ba138low.cc  Ba138low.h  Bi207.cc  Bi208.cc  Bi208.h  Bi210.cc  Bi212.cc  Bi214.cc  C14.cc  C14.h  Ca48.cc  Cd112low.cc  Cd112low.h  Cd113.cc  Co60.cc  Cs136.cc  Cs136.h  Cs137.cc  Cs137.h  Dy162low.h  Eu147.cc  Eu147.h  Eu152.cc  Eu154.cc  Eu154.h  Fe58low.cc  Gd146.cc  (+202 more)
source/bxdecay0/testing/: test_alpha.cxx  test_bb.cxx  test_bb_utils.cxx  test_decay0_generator.cxx  test_event.cxx  test_genbbsub.cxx  test_positron.cxx  test_resource.cxx  test_std_random.cxx  test_tsimpr.cxx
source/utilities/: bxdecay0-query.in
tools/: README.md  build.sh  clean.sh
